# openclaw-tamagotchi

./: .gitignore  HOWTO.md  LICENSE  README.md  pyproject.toml
pets/claw/: dialogues.yaml  pet.yaml
pets/dachshund/: dialogues.yaml  pet.yaml
pets/rabbit/: dialogues.yaml  pet.yaml
scripts/: generate_placeholders.py  generate_readme_media.py
src/tamagotchi/: __init__.py  __main__.py  agent.py  animation.py  config.py  controller.py  dialogues.py  pet.py  platform_macos.py  platform_overlay.py  speech_bubble.py  state.py  window.py
src/tamagotchi/assets_pipeline/: __init__.py  openclaw_import.py
tests/: conftest.py  test_animation.py  test_config.py  test_dialogues.py  test_drag.py  test_interaction.py  test_openclaw_import.py  test_pet.py  test_polish.py  test_smoke.py  test_speech_bubble.py
